order_process/example_customer/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-customer
  labels:
    pass.subject: example-customer
spec:
  restartPolicy: Always

  containers:
    - name: subject-behavior
      image: example_customer:latest
      imagePullPolicy: Never
      command: ["python", "/app/behavior.py"]

    - name: input-pool
      image: input_pool:latest
      imagePullPolicy: Never
      command: ["input-pool"]

      ports:
        - containerPort: 8081
        - containerPort: 8080
